--- a/src/assets/css/portfolio.css
+++ b/src/assets/css/portfolio.css
@@ -7,8 +7,6 @@
   width: 84%;
   margin-left: 7%;
 }
-
-<<<<<<< HEAD
 .portfolio-custom-tabs.nav-tabs > li, .nav-pills > li {
     float:none;
     display:inline-block;
@@ -109,8 +107,7 @@
   border: 1px solid #f9a11d;
   padding: 7px;
 }
-.portfolio-thumbs-wrap {
-}
+
 .portfolio-title {
   padding: 8px 15px 8px 0;
   position: relative;
@@ -119,7 +116,8 @@
   color: #666;
   text-transform: capitalize;
   text-align: center;
-  font-weight: 600;
+  font-family: 'ralewaysemibold';
+  
   margin: 0;
 }
 .photo-count {
